# mach-symbols-upload

./: LICENSE  README.md  pyproject.toml
mach_symbols_upload/: __main__.py
